src/objects/Engagement__c.object
<CustomObject>
    <description>Speaker Engagements and Requests, Moderator Engagements &amp; Requests</description>
    <fields>
        <fullName>Airport__c</fullName>
        <description>No relation to Airport on Members</description>
        <label>Airport</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Approved_travel_exception__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Checkbox ticked when travel exception (from travel policy) is applicable this has been approved.</description>
        <inlineHelpText>Checkbox ticked when travel exception (from travel policy) is applicable this has been approved.</inlineHelpText>
        <label>Approved travel exception</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Arrival_Date_and_time__c</fullName>
        <description>Add information regarding arrival date and time for speakers</description>
        <label>Arrival Date and time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Arrival_Flight__c</fullName>
        <description>No relation to Arrival Flight on Memebers</description>
        <label>Arrival Flight#</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Campaign_City__c</fullName>
        <description>Used in Email Templates</description>
        <formula>Session__r.Parent_Event__r.Campaign_City__c</formula>
        <inlineHelpText>Used in Email Templates</inlineHelpText>
        <label>Campaign City</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Campaign_Country__c</fullName>
        <description>Used in Email Templates</description>
        <formula>TEXT (Session__r.Parent_Event__r.Campaign_Country__c )</formula>
        <inlineHelpText>Used in Email Templates</inlineHelpText>
        <label>Campaign Country</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Campaign_End_Date__c</fullName>
        <description>Used in Email Templates</description>
        <formula>Session__r.Parent_Event__r.EndDate</formula>
        <inlineHelpText>Used in Email Templates</inlineHelpText>
        <label>Campaign End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Campaign_Est_Participants__c</fullName>
        <description>Used in E-mail Templates</description>
        <formula>Session__r.Parent_Event__r.Est_of_participants__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Used in E-mail Templates</inlineHelpText>
        <label>Campaign Est # Participants</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Campaign_Member_ID__c</fullName>
        <caseSensitive>true</caseSensitive>
        <description>Use to sync Speaker Requests and Campaign Members. Should not be visible to users, but only used for APEX triggers etc</description>
        <label>Campaign Member ID</label>
        <length>30</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Campaign_Member_Prio__c</fullName>
        <description>This field set the priority for updating the Campaign Member record. Used whena speaker is engaged in more than one speaker session on the same campaign. The higher number the higher priority. This field should not appear in any page lyouts</description>
        <formula>IF( ISPICKVAL(Request_Status__c, &quot;Confidential&quot;) , 
0, 
(
 IF( Multiple_Sessions_Logistics_Details__c =True, 100, 0)+ 
CASE( Request_Status__c , 
&quot;Declined&quot;, 10,
&quot;Cancelled (By DI)&quot;,20, 
&quot;Suggested&quot;, 30,
&quot;Pending&quot;,40,
&quot;Confirmed&quot;, 50,
0) 
+ CASE( Request_Type__c , 
&quot;Other&quot;, 1, 
&quot;Moderator&quot;, 2,
&quot;Speaker&quot;,3,
&quot;Speaker &amp; Moderator&quot;,4,
0))
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Campaign Member Prio</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Campaign_Name__c</fullName>
        <description>Used in E-mail Templates</description>
        <formula>Session__r.Parent_Event__r.Name</formula>
        <inlineHelpText>Used in E-mail Templates</inlineHelpText>
        <label>Campaign Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Campaign_Start_Date__c</fullName>
        <description>Used in Email Templates</description>
        <formula>Session__r.Parent_Event__r.StartDate</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Used in Email Templates</inlineHelpText>
        <label>Campaign Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Campaign_Target_Type__c</fullName>
        <formula>TEXT(  Session__r.Parent.Status  )</formula>
        <label>Campaign Target Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Campaign_Type_Category__c</fullName>
        <description>Collects and concatenate the Campaign Type and Campaign Category of the Campaign (not session) that the speaker engagement belongs to - used for reports</description>
        <formula>TEXT( Session__r.Parent_Event__r.Type ) &amp; &quot; - &quot; &amp; TEXT( Session__r.Parent_Event__r.Campaign_Category__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Campaign Type &amp; Category</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Campaign_Venue__c</fullName>
        <formula>Session__r.Venue__r.Name</formula>
        <label>Campaign Venue</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Charitable_contribution__c</fullName>
        <label>Charitable contribution</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Compensation_for_services_other_than_c__c</fullName>
        <label>Compensation for services &lt;&gt; Consulting</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Consulting_Services__c</fullName>
        <label>Consulting Services</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Contract_Signed__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Contract Signed?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Count_HQ__c</fullName>
        <description>Only for analysis to summarize e.g. Contacts with speaker engagements</description>
        <formula>1</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Only for analysis to summarize e.g. Contacts with speaker engagements</inlineHelpText>
        <label># Count (HQ)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Current_User__c</fullName>
        <description>Describes the full name of the current user. Used primarily for mail merge</description>
        <formula>$User.Full_Name__c</formula>
        <inlineHelpText>Describes the full name of the current user. Used primarily for mail merge</inlineHelpText>
        <label>Current User</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Departure_Flight__c</fullName>
        <description>No relation to Departure Flight on Members</description>
        <label>Departure Flight#</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Direct_compensation_as_faculty_speaker__c</fullName>
        <description>Delete Q3 2017 if not used</description>
        <label>Direct compensation as faculty/sp TBD</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Emergency_Contact_Details__c</fullName>
        <label>Emergency Contact Details</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Flight_Arranged_by_DI__c</fullName>
        <label>Flight Arranged by DI</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>Yes</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Gifts__c</fullName>
        <label>Gifts</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Honorarium__c</fullName>
        <label>Honorarium</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Hotel_Arrangement_Status__c</fullName>
        <label>Hotel Arrangement Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Not Yet Arranged</fullName>
                </value>
                <value>
                    <fullName>Arranged</fullName>
                </value>
                <value>
                    <fullName>No Accomodation Needed</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Hotel_Check_In_Date__c</fullName>
        <label>Hotel Check-In</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Hotel_Check_Out_Date__c</fullName>
        <label>Hotel Check-Out</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Hotel_Information__c</fullName>
        <label>Hotel Information</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Hotel__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Hotel</label>
        <lookupFilter>
            <active>false</active>
            <filterItems>
                <field>Account.RecordTypeId</field>
                <operation>equals</operation>
                <value>Competitor (D)</value>
            </filterItems>
            <isOptional>true</isOptional>
        </lookupFilter>
        <referenceTo>Account</referenceTo>
        <relationshipName>Speaker_Moderator_Requests</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Internal_Speaker__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Internal Speaker</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Invoice_Address__c</fullName>
        <label>Invoice Address</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>KolInformation__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>KOL information</label>
        <referenceTo>Expert__c</referenceTo>
        <relationshipLabel>Speaker Engagements</relationshipLabel>
        <relationshipName>SpeakerEngagements</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Local_or_International__c</fullName>
        <description>Checks if the speaker engagement is owned by someone with user country HQ or not. Used in reports to check if KOLs are engaged locally or internationally within Implants.</description>
        <formula>IF( CONTAINS( Owner:User.User_Country_Text__c , &quot;HQ&quot;) , &quot;International&quot;, &quot;Local&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Shows if the owner of the Speaker Engagement belongs to HQ (international) or a Country Organisation (Local)</inlineHelpText>
        <label>Local or International?</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Meals_Included__c</fullName>
        <label>Meals Included</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Breakfast</fullName>
                </value>
                <value>
                    <fullName>Lunch</fullName>
                </value>
                <value>
                    <fullName>Dinner</fullName>
                </value>
                <value>
                    <fullName>Breakfast &amp; Lunch</fullName>
                </value>
                <value>
                    <fullName>Lunch &amp; Dinner</fullName>
                </value>
                <value>
                    <fullName>Breakfast, Lunch &amp; Dinner</fullName>
                </value>
                <value>
                    <fullName>None</fullName>
                </value>
                <value>
                    <fullName>All meals included</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Multiple_Sessions_Logistics_Details__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Checked if speaker is engaged at several sessions at this event - means that logistics details are captured in the data of this session.</description>
        <inlineHelpText>Check if speaker is engaged at several sessions and the logistics details in this engagement is the one that should be used on transfer lists etc.</inlineHelpText>
        <label>Multiple Sessions - Logistics Details</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>NPI_Number__c</fullName>
        <label>NPI Number</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Name_of_Campaign__c</fullName>
        <description>Delete Q3 2017 if not used</description>
        <formula>Session__r.Parent_Event__r.Name</formula>
        <label>Name of Campaign TBD</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Other__c</fullName>
        <label>Other</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Overall_Agreement__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Overall Agreement</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Planning_Hours_to_be_compensated__c</fullName>
        <defaultValue>0</defaultValue>
        <label># of Planning Hours to be compensated</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Practioner_ID_NPI_number__c</fullName>
        <formula>Speaker__r.Practitioner_ID_NPI_in_US__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Practioner ID/NPI number</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Products__c</fullName>
        <label>Products</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Program_Date_s__c</fullName>
        <description>Please be as specific as you can. Dates should not be seen as confirmed until confirmation received.</description>
        <label>Program Date/s</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Reference_Person_at_Market_Company__c</fullName>
        <label>Reference Person at Market Company</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Request_Status__c</fullName>
        <label>Request Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Suggested</fullName>
                    <default>true</default>
                    <label>Suggested</label>
                </value>
                <value>
                    <fullName>Confidential</fullName>
                </value>
                <value>
                    <fullName>Pending</fullName>
                </value>
                <value>
                    <fullName>Confirmed</fullName>
                </value>
                <value>
                    <fullName>Speaker Declined</fullName>
                </value>
                <value>
                    <fullName>Cancelled by DI</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Request_Type__c</fullName>
        <label>Request Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Speaker</fullName>
                    <default>true</default>
                    <label>Speaker</label>
                </value>
                <value>
                    <fullName>Moderator</fullName>
                </value>
                <value>
                    <fullName>Speaker &amp; Moderator</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Session_End_Date_Time__c</fullName>
        <description>This field mirrors the Sessions EndDate &amp; Time. The field is used in E-mail templates. To change the End Date &amp; Time, update the Campaign Session where this Engagement is connected.</description>
        <formula>Session__r.Session_End_Date_Time__c</formula>
        <inlineHelpText>This field mirrors the Sessions EndDate &amp; Time. The field is used in E-mail templates. To change the End Date &amp; Time, update the Campaign Session where this Engagement is connected.</inlineHelpText>
        <label>Session End Date &amp; Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Session_Length__c</fullName>
        <formula>TEXT(Session__r.Session_Length__c)  &amp; &quot; &quot;  &amp;  TEXT(Session__r.Session_Length_Unit__c)</formula>
        <label>Session Length</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Session_Name__c</fullName>
        <formula>Session__r.Name</formula>
        <label>Session Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Session_Start_Date_Time__c</fullName>
        <description>This field mirrors the Sessions Start Date &amp; Time. The field is used in E-mail templates. To change the Start Date &amp; Time, update the Campaign Session where this Engagement is connected.</description>
        <formula>Session__r.Session_Start_Date_Time__c</formula>
        <inlineHelpText>This field mirrors the Sessions Start Date &amp; Time. The field is used in E-mail templates. To change the Start Date &amp; Time, update the Campaign Session where this Engagement is connected.</inlineHelpText>
        <label>Session Start Date &amp; Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Session_Topic__c</fullName>
        <description>The Suggested Session Topic - By default the same as the Session name, but can be changed. Used in invitation to Speakers/Moderators</description>
        <inlineHelpText>The Suggested Session Topic - By default the same as the Session name, but can be changed. Used in invitation to Speakers/Moderators</inlineHelpText>
        <label>Session Topic</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Session__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Session</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Campaign.RecordTypeId</field>
                <operation>equals</operation>
                <value>DI: Campaign Session</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Campaign</referenceTo>
        <relationshipLabel>Speaker Engagements</relationshipLabel>
        <relationshipName>SpeakerRequests</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Simultaneous_Translation__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Simultaneous Translation?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Speaker_Contract__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Speaker Contract</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>$Source.Speaker__c</field>
                <operation>equals</operation>
                <valueField>KOL_Contract__c.Contact__c</valueField>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>KOL_Contract__c</referenceTo>
        <relationshipLabel>Speaker Engagements</relationshipLabel>
        <relationshipName>Speaker_Engagements</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Speaker__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Speaker</label>
        <lookupFilter>
            <active>true</active>
            <booleanFilter>1 OR 2 OR 3 OR 4</booleanFilter>
            <filterItems>
                <field>Contact.Speaker__c</field>
                <operation>equals</operation>
                <value>True</value>
            </filterItems>
            <filterItems>
                <field>Contact.Local_Speaker__c</field>
                <operation>equals</operation>
                <value>True</value>
            </filterItems>
            <filterItems>
                <field>Contact.National_Speaker__c</field>
                <operation>equals</operation>
                <value>True</value>
            </filterItems>
            <filterItems>
                <field>Contact.International_Speaker__c</field>
                <operation>equals</operation>
                <value>True</value>
            </filterItems>
            <isOptional>true</isOptional>
        </lookupFilter>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Speaker Engagements</relationshipLabel>
        <relationshipName>Requets</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Transfer_Details__c</fullName>
        <label>Transfer Details</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Travel_Expenses__c</fullName>
        <label>Travel Expenses</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Travel_Expenses_covered_by_DI__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Travel Expenses covered by DS?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Travel_Hours_to_be_compensated__c</fullName>
        <defaultValue>0</defaultValue>
        <label># of Travel Hours to be compensated</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Work_hours__c</fullName>
        <defaultValue>0</defaultValue>
        <label># of hours of work</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Speaker Engagement</label>
    <listViews>
        <fullName>All_Speaker_Engagements</fullName>
        <columns>OWNER.FIRST_NAME</columns>
        <columns>OWNER.LAST_NAME</columns>
        <columns>NAME</columns>
        <columns>Campaign_Name__c</columns>
        <columns>Campaign_City__c</columns>
        <columns>Session__c</columns>
        <columns>Campaign_Start_Date__c</columns>
        <columns>Campaign_End_Date__c</columns>
        <columns>Campaign_Country__c</columns>
        <columns>Speaker__c</columns>
        <columns>Internal_Speaker__c</columns>
        <filterScope>Everything</filterScope>
        <label>All Speaker Engagements</label>
        <language>en_US</language>
        <sharedTo>
            <role>Dentsply_IH_CEO</role>
        </sharedTo>
    </listViews>
    <nameField>
        <label>Request Title</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Speaker Engagements</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>